--- a/AspWebProjet/Views/Shared/_Layout - Backup.cshtml
+++ b/AspWebProjet/Views/Shared/_Layout - Backup.cshtml
@@ -9,62 +9,33 @@
     <link rel="stylesheet" href="~/AspWebProjet.styles.css" asp-append-version="true" />
 </head>
 <body>
-            <header>
+    <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
             <div class="container-fluid">
-                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">MaFormaPlus</a>
+                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">AspWebProjet</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                     <ul class="navbar-nav flex-grow-1">
-                        <li class="active">
-                        <a class="btn btn-outline-primary mb-2"  href="Index.html">Accueil</a>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
-                       @* <li>
-                            <a href="#about">A propos</a>
-                        </li>*@
-                        @*<li>
-                            <a href="#training">Formations</a>
-                        </li>*@
-                        <li>
-                             @*<a class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Register">Register</a>*@
-                            <a class="btn btn-outline-success mb-2" asp-area="Identity" asp-page="/Account/Register">S'inscrire</a>
-                        </li>
-                        @*<li>
-                            <a href="#review">Avis</a>
-                        </li>*@
-                        <li>
-                            <a class="btn btn-outline-primary mb-2" href="#contact">Contactez-nous</a>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
                         </li>
                     </ul>
-                    
-                    @Html.Partial("_LoginPartial")
-                    @*<a class="menu cta btn"><img src="~/Images/menu_icon.png" alt="#"></a>*@
-                    @*<p class="menu cta">Menu</p>*@
+                    <partial name="_LoginPartial" />
                 </div>
             </div>
         </nav>
     </header>
-
-
     <div class="container">
         <main role="main" class="pb-3">
             @RenderBody()
         </main>
     </div>
-
-    @*<div class="overlay">
-        <a class="close">&times;</a>
-        <div class="overlay__content">
-        <a   href="Index.html">Accueil</a>
-        <a class="inscriptionm" asp-area="Identity" asp-page="/Account/Register">S'inscrire</a>
-        <a  href="#contact">Contactez-nous</a>
-            @Html.Partial("_LoginPartial")
-        </div>
-    </div>*@
-    <script type="text/javascript" src="~/js/mobile.js"></script>
 
     <footer class="border-top footer text-muted">
         <div class="container">
