--- a/AspWebProjet/Views/Modules/Edit.cshtml
+++ b/AspWebProjet/Views/Modules/Edit.cshtml
@@ -19,9 +19,12 @@
                 <span asp-validation-for="Nom" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Logo" class="control-label"></label>
-                <input asp-for="Logo" class="form-control" />
-                <span asp-validation-for="Logo" class="text-danger"></span>
+                <label asp-for="Logo" class="control-label">Choisir un logo</label>
+                <input asp-for="Logo" onchange="document.getElementById('logoModule')
+                    .src=window.URL
+                    .createObjectURL(this.files[0])" type="file" class="form-control" />
+                <img src="~/images/@Model.Logo" alt="Pas de logo" id="logoModule" />
+
             </div>
             <div class="form-group">
                 <label asp-for="Resume" class="control-label"></label>
