--- a/AspWebProjet/Views/Shared/_Layout2.cshtml
+++ b/AspWebProjet/Views/Shared/_Layout2.cshtml
@@ -1,4 +1,6 @@
-﻿<!DOCTYPE html>
+﻿@model IEnumerable<AspWebProjet.Models.Session>
+
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="utf-8" />
@@ -10,6 +12,14 @@
 </head>
 <body>
             <header>
+                <div>
+                    <marquee >
+                @foreach (var item in Model)
+                {
+                    <span>@item.Intitule, Date de début : @item.DateDebut, Date de fin : @item.DateFin.......... </span>
+                }
+            </marquee>
+                </div>
 
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
             <div class="container-fluid">
@@ -57,16 +67,6 @@
     </div>
 
 
-    
-    @*<div class="overlay">
-        <a class="close">&times;</a>
-        <div class="overlay__content">
-        <a   href="Index.html">Accueil</a>
-        <a class="inscriptionm" asp-area="Identity" asp-page="/Account/Register">S'inscrire</a>
-        <a  href="#contact">Contactez-nous</a>
-            @Html.Partial("_LoginPartial")
-        </div>
-    </div>*@
     <script type="text/javascript" src="~/js/mobile.js"></script>
 
     <footer class="border-top footer text-muted">
