--- a/AspWebProjet/Views/Modules/Create.cshtml
+++ b/AspWebProjet/Views/Modules/Create.cshtml
@@ -33,11 +33,11 @@
                 <span asp-validation-for="Infos" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="ParcoursId" class="control-label"></label>
+                <label asp-for="ParcoursId" class="control-label">Parcours</label>
                 <select asp-for="ParcoursId" class ="form-control" asp-items="ViewBag.ParcoursId"></select>
             </div>
             <div class="form-group">
-                <label asp-for="UnitePedagogiqueId" class="control-label"></label>
+                <label asp-for="UnitePedagogiqueId" class="control-label">Unité Pédagogique</label>
                 <select asp-for="UnitePedagogiqueId" class ="form-control" asp-items="ViewBag.UnitePedagogiqueId"></select>
             </div>
             <div class="form-group">
