--- a/AspWebProjet/Views/Parcours/Edit.cshtml
+++ b/AspWebProjet/Views/Parcours/Edit.cshtml
@@ -24,9 +24,12 @@
                 <span asp-validation-for="Resume" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Logo" class="control-label"></label>
-                <input asp-for="Logo" class="form-control" />
-                <span asp-validation-for="Logo" class="text-danger"></span>
+                <label asp-for="Logo" class="control-label">Choisir un logo</label>
+                <input asp-for="Logo" onchange="document.getElementById('logoParcours')
+                    .src=window.URL
+                    .createObjectURL(this.files[0])" type="file" class="form-control" />
+                <img alt="Logo du parcours" id="logoParcours" />
+                
             </div>
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
