--- a/AspWebProjet/Views/Shared/_Layout.cshtml
+++ b/AspWebProjet/Views/Shared/_Layout.cshtml
@@ -1,4 +1,9 @@
-﻿<!DOCTYPE html>
+﻿@using Microsoft.AspNetCore.Identity
+@inject SignInManager<IdentityUser> SignInManager
+@inject UserManager<IdentityUser> UserManager
+
+
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="utf-8" />
@@ -29,10 +34,15 @@
                         @*<li>
                             <a href="#training">Formations</a>
                         </li>*@
-                        <li>
+                        @if (!SignInManager.IsSignedIn(User))
+                        {
+                           <li>
                              @*<a class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Register">Register</a>*@
-                            <a class="btn btn-outline-success mb-2" asp-area="Identity" asp-page="/Account/Register">S'inscrire</a>
-                        </li>
+                            
+                             
+                             <a class="btn btn-outline-success mb-2" asp-area="Identity" asp-page="/Account/Register">S'inscrire</a>
+                        </li> 
+                        }
                         @*<li>
                             <a href="#review">Avis</a>
                         </li>*@
